2014-10-16  François  <francois@dechelle.net>

	* fixed compilation problem when building package on ubuntu 12.04

2014-09-26  François  <francois@dechelle.net>

	* changed alert reporting code to use local Perl agent via HTTP/Post request; tested

2014-09-14  François Déchelle  <francois@dechelle.net>

	* fixed status % undecided

2014-09-11  François Déchelle  <francois@dechelle.net>

	* fixed status related bugs after introducing white listed status; tested

2014-09-10  François Déchelle  <francois@dechelle.net>

	* added white listed status for module 1

2014-09-05  François Déchelle  <francois@dechelle.net>

	* changed reporting to send alert immediately instead of waiting for end of scan

2014-09-04  François Déchelle  <francois@dechelle.net>

	* added small test server in python

	* added first callback (report_print in umwsu-scan.c); runs ok

	* tested new implementation with callbacks (no callbacks yet); runs ok

2014-09-03  François Déchelle  <francois@dechelle.net>

	* finished implementation of callbacks; compiles ok

2014-09-02  François Déchelle  <francois@dechelle.net>

	* adding XML report sending to socket; in progress

2014-08-29  François Déchelle  <francois@dechelle.net>

	* adding XML report generation; in progress

	* moved status and report functions to own file

2014-08-28  François Déchelle  <francois@dechelle.net>

	* implemented and tested multi-threaded version of directory scan

	* added struct umwsu_report and detailled reporting from modules

2014-08-27  François Déchelle  <francois@dechelle.net>

	* added verbosity level in struct umwsu

	* adding report structure, added better status evaluation in case of multiple modules scanning a file

	* added UMWSU_SUSPICIOUS to enum umwsu_status, changed scan function and modules

	* added extern "C" for C++ compilation

2014-08-11  François Déchelle  <francois@dechelle.net>

	* fixed inconsistent naming

2014-08-08  François Déchelle  <francois@dechelle.net>

	* modified messages
